// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon List block Save render should match snapshot 1`] = `
<div
  class="ugb-icon-list ugb-icon--icon-check ugb-main-block"
>
  <div
    class="ugb-inner-block"
  >
    <div
      class="ugb-block-content"
    >
      <ul>
        <div />
      </ul>
    </div>
  </div>
</div>
`;

exports[`Icon List block Save render should match snapshot with attributes 1`] = `
<div
  class="ugb-icon-list ugb-icon--icon-check ugb-icon-list--display-grid ugb-main-block"
>
  <div
    class="ugb-inner-block"
  >
    <div
      class="ugb-block-content"
    >
      <ul>
        <div>
          <li>
            text
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;
